@@ -161,9 +161,10 @@ APR_DECLARE(apr_status_t) apr_os_pipe_put_ex(apr_file_t **file,
                                   apr_pool_cleanup_null);
     }
 #ifndef WAITIO_USES_POLL
-    /* Create a pollset with room for one descriptor. */
-    /* ### check return codes */
-    (void) apr_pollset_create(&(*file)->pollset, 1, pool, 0);
+    /* Start out with no pollset.  apr_wait_for_io_or_timeout() will
+     * initialize the pollset if needed.
+     */
+    (*file)->pollset = NULL;
 #endif
     return APR_SUCCESS;
 }
@@ -197,7 +198,7 @@ APR_DECLARE(apr_status_t) apr_file_pipe_create(apr_file_t **in, apr_file_t **out
     (*in)->thlock = NULL;
 #endif
 #ifndef WAITIO_USES_POLL
-    (void) apr_pollset_create(&(*in)->pollset, 1, pool, 0);
+    (*in)->pollset = NULL;
 #endif
     (*out) = (apr_file_t *)apr_pcalloc(pool, sizeof(apr_file_t));
     (*out)->pool = pool;
@@ -212,7 +213,7 @@ APR_DECLARE(apr_status_t) apr_file_pipe_create(apr_file_t **in, apr_file_t **out
     (*out)->thlock = NULL;
 #endif
 #ifndef WAITIO_USES_POLL
-    (void) apr_pollset_create(&(*out)->pollset, 1, pool, 0);
+    (*out)->pollset = NULL;
 #endif
     apr_pool_cleanup_register((*in)->pool, (void *)(*in), apr_unix_file_cleanup,
                          apr_pool_cleanup_null);
